# C

./: .gitignore  README.md
algorithm/: GeneticAlgorithm.c
authority/: example1  example1.c
character/: ascll_hex.c
character/enca-1.16/: enca.spec
character/libiconv-1.14/: config.status  libtool
commandline/: test_getopt  test_getopt.c  test_getopt_long  test_getopt_long.c
commandline/gperf-3.0.4/: config.status
cross-platform/apr/: Makefile  example1.c
daemon/: init.c  test  test.c
file/dir/: opendir.c
file/filesize/: example1.c  example2.c  fstat.c  stat.c
float/: bit_operate.c  cpu-word-length.c  float  float.c  test  test.c  unsigned_number.c
game/tetris/: Makefile  block.c  block.h  main.c  tetris
game/tetris-c/: block.c  tetris
gnome-develop/glib-2.46.2/: INSTALL  Makefile  Makefile.in  config.h  config.h.win32  config.lt  config.status  configure  gio-2.0.pc  gio-unix-2.0.pc  gio-windows-2.0.pc  glib-2.0.pc  glib-gettextize  glib-zip  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  libtool  msvc_recommended_pragmas.h
net/demo/: CMakeLists.txt  gethostbyaddr  gethostbyaddr.c  gethostbyname  gethostbyname.c  visit_web_page.c
net/demo/src/: client.c  gethostbyaddr.c  gethostbyname.c  gethostname.c  server.c  visit_web_page.c
parallel/: fork.c  thread.c
sound/demo/: mp3  (+3 more)
string/: atoi.c  itoa.c  mmap.c  my_atoi.c  strcasecmp.c  strmov  strmov.c  strnshift  strnshift.c  strreverse  strreverse.c  strtok.c  strxmov.c  test  test.c  va_arg  va_arg.c
terminal/: change_size  change_size.c
time/: time_diff  time_diff.c
(+26955 files in other folders)
